// SPDX-License-Identifier: Apache-2.0
// Copyright Authors of Cilium

syntax = "proto3";

package statedb;

option go_package = "github.com/cilium/cilium/pkg/statedb/grpc";

service StateDB {
    rpc Get (QueryRequest) returns (stream Object);
    rpc LowerBound (QueryRequest) returns (stream Object);
    rpc Watch (WatchRequest) returns (stream Object);
}

message QueryRequest {
	string table = 1;
	string index = 2;

	// key is a full key or a key prefix. Generated by
	// Index[...].FromKey.
	bytes key = 3;

	// limit is the number of matching objects to return.
	// If zero all matching objects are streamed.
	uint32 limit = 4;
}

message WatchRequest {
	string table = 1;
}

/* TODO 
message WatchResponse {
	Object object = 1;
	bool deleted = 2;
} */

message Object {
	uint64 revision = 1;
	bytes value = 2; // gob encoded
}
